--- a/build.gradle
+++ b/build.gradle
@@ -25,13 +25,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
 
-	implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation group: 'org.keycloak', name: 'keycloak-spring-boot-starter', version: '21.0.0'
+//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+//	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
+//	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
+//	implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
