--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,37 @@
 spring.application.name=chessRating
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/ChessRating
+
+spring.security.oauth2.client.registration.keycloak.client-id=chess-rating
+spring.security.oauth2.client.registration.keycloak.client-secret=kSXFfH2iTwxbWpvyP1YagQvDyCNHdTgK
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=https://lemur-17.cloud-iam.com/auth/realms/chess-rating
+#spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://lemur-17.cloud-iam.com/auth
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://lemur-17.cloud-iam.com/auth/realms/chess-rating/protocol/openid-connect/certs
+
+
+
+keycloak.auth-server-url=https://lemur-17.cloud-iam.com/auth
+keycloak.realm=chess-rating
+keycloak.resource=chess-rating
+#keycloak.credentials.secret=kSXFfH2iTwxbWpvyP1YagQvDyCNHdTgK
+
+#keycloak.ssl-required=external
+keycloak.public-client=true
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
+
+
+
+#keycloak.principal-attribute=preferred_username
+
+
+
+logging.level.org.keycloak=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2.server.resource=DEBUG
+logging.level.org.springframework.security.oauth2.jwt=DEBUG
+logging.level.com.chessrating.config.security=DEBUG
+logging.level.com.chessrating.=DEBUG
