--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: '3.8'
 services:
   chess-rating-app:
-    image: chess_rating
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/akosogova/chessrating:latest
     ports:
       - "8080:8080"
     depends_on:
@@ -15,6 +12,8 @@ services:
 
   service-db:
     image: mongo:latest
+    environment:
+      MONGO_INITDB_DATABASE: ChessRating
     ports:
       - "27017:27017"
     volumes:
