Fix mongodb default data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,5 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - ./scripts/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js
+      - ./scripts/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     restart: unless-stopped
