--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 group = 'com.chessrating'
-//version = '0.0.1-SNAPSHOT'
 archivesBaseName = 'chessRating'
 def libFolder = new File("${projectDir}/lib")
 def buildFolder = new File("${projectDir}/build")
@@ -31,21 +30,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation group: 'org.keycloak', name: 'keycloak-spring-boot-starter', version: '21.0.0'
-//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-//	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
-//	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-
-//	implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
-//tasks.named('test') {
-//	useJUnitPlatform()
-//}
+tasks.named('test') {
+	useJUnitPlatform()
+}
 
 task copyLibs {
 	configurations.implementation.setCanBeResolved(true)
@@ -66,31 +59,10 @@ task copyToBuild {
 		if (!buildFolder.exists()) {
 			buildFolder.mkdirs()
 		}
-//		copy {
-//			from '.'
-//			include '*.xml'
-//			include '*.json'
-//			include '*.conf'
-//			into buildFolder
-//		}
-
-//		if (!distResourcesFolder.exists()) {
-//			distResourcesFolder.mkdirs()
-//		}
 
 		if (!buildLibFolder.exists()) {
 			buildLibFolder.mkdirs()
 		}
-
-//		copy {
-//			from resourceFolder
-//			into distResourcesFolder
-//		}
-
-//		copy {
-//			from testResourceFolder
-//			into distResourcesFolder
-//		}
 
 		copy {
 			from libFolder
@@ -103,12 +75,6 @@ task copyToBuild {
 jar {
 	destinationDirectory.set(file(buildFolder))
 	archiveFileName.set("${archivesBaseName}.jar")
-//	from('.') {
-//		include 'log4j2.xml'
-//	}
-//	from(testResourceFolder) {
-//		include '**/*'
-//	}
 
 	manifest {
 		attributes(
@@ -120,25 +86,12 @@ jar {
 	}
 }
 
-//test {
-//	maxHeapSize = '1G'
-//	testLogging {
-//		events "PASSED", "SKIPPED", "FAILED"
-//		exceptionFormat "full"
-//		showExceptions true
-//		showCauses true
-//		showStackTraces true
-//	}
-//}
-
 build {
 	dependsOn 'copyLibs'
 	dependsOn 'compileJava'
 	dependsOn 'copyToBuild'
-//	dependsOn 'test'
 	dependsOn 'jar'
 	tasks.findByName('compileJava').dependsOn 'copyLibs'
 	tasks.findByName('copyToBuild').dependsOn 'compileJava'
-//	tasks.findByName('test').dependsOn 'copyToDist'
 	tasks.findByName('jar').dependsOn 'copyToBuild'
 }
