--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 spring.application.name=chessRating
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/ChessRating
 
+server.port=8090
+
 keycloak.realm=chess-rating
 keycloak.resource=chess-rating
 keycloak.auth-server-url=https://lemur-17.cloud-iam.com/auth
